[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/image.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Image" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
api_key = "o8xvUt3226LfZfBpyNakYDID8xRKZWSNYObkTLri"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="ImageHTTPReq" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="ImageHTTPReq" to="." method="_on_ImageHTTPReq_request_completed"]
